# AgriDrone-AI

./: .gitignore  README.md  app.py  best.pt  build.py  data.json  main.py  pyproject.toml  qa.bat  requirements.txt  switch_repo.sh
classes/: DH.py  ScreenCapture.py  Video.py  Wrapper.py  Yolov11nCls.py  firebase_helper.py  folder_helper.py  path.py
classes/rpi/: LED.py
