[project]
name = "minicomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=7.1.0",
    "gpiozero>=2.0.1",
    "inquirerpy>=0.3.4",
    "keyboard>=0.13.5",
    'lgpio>=0.2.2.0; sys_platform == "linux"',
    "mss>=10.1.0",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.9",
    "pynput>=1.8.1",
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "ultralytics>=8.3.218",
]
